--- a/index.html
+++ b/index.html
@@ -2,11 +2,8 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    
     <title>Déborah</title>
   </head>
 
-  <body>
-    Hello!
-  </body>
+  <body></body>
 </html>
