--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
   <head>
     <meta charset='utf-8'>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    
     <title>Déborah</title>
   </head>
 
-  <body></body>
+  <body>
+    <div class="manuntecao">
+      <p> O site está em manutenção! Perdão por qualquer erro.</p>
+    </div>
+  </body>
 </html>
