alteração no exto

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	 <body>
 			<nav>
 				<div class="container">
-					<a id="logo"> Déborah <span id="fonseca">Fonseca</span></a>
+					<a id="logo"> Déborah Fonseca</a>
 					<ul id="menu">
 						<li><a href="#!">Meu Trabalho</a></li>
 						<li><a href="#!">Habilidades</a></li>
@@ -29,10 +29,9 @@
 				<div class="conteudo">
 					<img id="me" src="img/me.jpg">
 					<div class="about-me">
-						<p>Oi! Sou estudante do curso Tecnologia em Sistemas para Internet no Instituto Federal do Sudeste de Minas Gerais. Eu sou apaixonada por  web designer, programação e tecnologia. Você pode me seguir no  <a href="https://github.com/Dborah">GitHub</a>!</p>	
+						<p>Oi, estudo Tecnologia em Sistemas para Internet no Instituto Federal do Sudeste de Minas Gerais. Sou apaixonada por  web designer, programação e tecnologia. Você pode me seguir no  <a href="https://github.com/Dborah">GitHub</a>!</p>	
 					</div>
 				</div>
 			</section>
-
 	 </body>
 </html>
