--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 	 <head>
-			<title>Déborah Fonseca</title>
-			<meta charset="utf-8"/>
+	 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  			<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  			<title>Déborah Fonseca</title>
 
-			<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <!-- CSS  -->
+  			<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  			<link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  			<link rel="stylesheet" type="text/css" href="css/style.css">
 			<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-			<link rel="stylesheet" type="text/css" href="css/style.css">			
+						
 	 </head>
 	 <body>
 			<nav>
@@ -19,11 +24,7 @@
 					</ul>
 				</div>
 			</nav>
-			<section>
-				<div class="manuntecao">
-    			  <p> O site está em manutenção! Perdão por qualquer erro.</p>
-    			</div>
-			</section>
+			
 
 			<section>
 				<div class="conteudo">
